--- a/sobre.html
+++ b/sobre.html
@@ -49,33 +49,34 @@
         <section class="spacex-hero">
             <div class="spacex-hero-overlay"></div>
             <div class="spacex-hero-content">
-                <h1 class="spacex-title">GRACEXPRESS</h1>
-                <h2 class="spacex-subtitle">THE DIGITAL TEXTILE AUTHORITY</h2>
-                <div class="spacex-divider"></div>
-                <p class="spacex-tagline">Where Creative Vision Meets Material Reality</p>
+                <h1 class="spacex-title fade-in-up">GRACEXPRESS</h1>
+                <h2 class="spacex-subtitle slide-in-short" style="transition-delay: 0.2s;">THE DIGITAL TEXTILE AUTHORITY
+                </h2>
+                <div class="spacex-divider reveal-width" style="transition-delay: 0.3s;"></div>
+                <p class="spacex-tagline slide-in-short" style="transition-delay: 0.4s;">Where Creative Vision Meets
+                    Material Reality</p>
             </div>
         </section>
 
         <!-- Intro Section -->
-        <section class="spacex-section spacex-intro">
-            <div class="spacex-container">
-                <p class="spacex-lead">
-                    In the delicate space between the warp of history and the weft of innovation, GraceXpress exists as
-                    the definitive bridge. We do not just list fabrics; we curate the tactile universe.
-                </p>
-                <p class="spacex-text">
-                    Founded on the principle that true sartorial excellence begins with a profound understanding of
-                    fiber, we serve as the essential compass for designers, tailors, and fashion visionaries.
-                </p>
-            </div>
+        <div class="spacex-container">
+            <p class="spacex-lead slide-in-long">
+                In the delicate space between the warp of history and the weft of innovation, GraceXpress exists as
+                the definitive bridge. We do not just list fabrics; we curate the tactile universe.
+            </p>
+            <p class="spacex-text slide-in-short" style="transition-delay: 0.2s;">
+                Founded on the principle that true sartorial excellence begins with a profound understanding of
+                fiber, we serve as the essential compass for designers, tailors, and fashion visionaries.
+            </p>
+        </div>
         </section>
 
         <!-- Ecosystem Section -->
         <section class="spacex-section spacex-ecosystem">
             <div class="spacex-container">
-                <div class="spacex-grid-split">
+                <div class="spacex-grid-split slide-in-long">
                     <div class="spacex-col-text">
-                        <h3 class="spacex-heading">THE GRACEXPRESS ECOSYSTEM</h3>
+                        <h3 class="spacex-heading fade-in-up">THE GRACEXPRESS ECOSYSTEM</h3>
                         <p class="spacex-text">
                             We are a Premier Digital Textile Archive and a living library of sensory knowledge. Our
                             purpose is to demystify the complexities of global textiles, allowing creators to master
@@ -90,9 +91,9 @@
         <section class="spacex-section spacex-stats">
             <div class="spacex-container">
                 <h3 class="spacex-heading center">BY THE NUMBERS: OUR IMPACT</h3>
-                <div class="spacex-stats-grid">
-                    <div class="spacex-stat-item">
-                        <span class="spacex-stat-val">120+</span>
+                <div class="spacex-stats-grid stagger-container">
+                    <div class="spacex-stat-item stagger-item">
+                        <span class="spacex-stat-val count-up">120+</span>
                         <span class="spacex-stat-label">Unique Textures</span>
                         <p class="spacex-stat-desc">A meticulously curated digital catalog, each with its own technical
                             biography.</p>
@@ -249,6 +250,7 @@
         </div>
     </div>
 
+    <script src="js/animations.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/supabase-config.js"></script>
     <script src="js/auth-service.js"></script>
